1️⃣ V.1.5 🎉 WORKING ON PRODUCTION, DUAL DEV AND PROD ENV  ✅ | Translate, file attached ...  🎉

--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "customize-cra": "^1.0.0",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "nanoid": "^3.1.20",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^9.0.10",
@@ -27,8 +31,9 @@
   },
   "scripts": {
     "start": "serve -s build",
-    "local": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "env-cmd -f .env.development react-app-rewired --max_old_space_size=4096 start",
+    "local": "env-cmd -f .env.development react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
