--- a/client/.gitignore
+++ b/client/.gitignore
@@ -18,6 +18,7 @@ node_modules/
 .env.local
 .env.development.local
 .env.development
+.env.staging
 .env.production
 .env.test.local
 .env.production.local
