--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "dev": "env-cmd -f .env.development react-app-rewired --max_old_space_size=4096 start",
     "local": "env-cmd -f .env.development react-app-rewired start",
     "build": "react-app-rewired build",
+    "build:staging": "env-cmd -f .env.staging react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
