--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^9.0.10",
     "react-loader-spinner": "^4.0.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
